$Id$

v0.39.9		29-Jan-2004

	general:
		Changed first time installation to install mbcico itself again
		to handle incoming telnet sessions at port 60177. The program
		mbtelind is obsolete, this was a temporary hack. Change your
		inetd or xinetd configuration for itn (tfido) calls. 
		See the documentation of mbcico how to do this.

	mbcico:
		Added telnet input and output filters so we can now call and
		answer telnet (ITN) sessions. We don't need mbtelind anymore
		to handle incoming calls.

	mbsetup:
		Clearing the working message is now only done by the keyboard
		read function.


v0.39.8		26-Jan-2004 - 29-Jan-2004

	warning:
		Avoid this version, binkp compression is buggy.

	libcommon.a:
		Fixed compiler directive for Linux in execute function.
		Code cleanup.

	mbcico:
		Fixed binkp file resync.
		Binkp now only tries to compress data frames.
		Fixed binkp master timer reset points, this should make session
		timeout work.
		Code cleanup.
		The filelist function didn't add files from fileboxes.
		Added refresh heartbeat in binkp driver to prevent broken
		sessions after 10 minutes.
		Added more logging to investigate the tty hangup problem
		Fixed zlib (un)compress buffersize init.


v0.39.7		14-Jan-2004 - 26-Jan-2004

	remark:
		Calling points is available now, but I know in the past that I
		changed it to allways call the boss. That was from the time 
		that mbtask didn't exist. It is possible that something is
		broken now, please report such situations.

	general:
		In all sources replaced the usleep function with the msleep
		function. The usleep function will become obsolete someday.

	libcommon.a:
		In execute and execsh on Linux systems sync() is called before
		and after running the external program to make sure diskbuffers
		are committed.
		Added a milliseconds timer.
		Before and after execute and execsh a 200 ms pause is inserted
		to prevent (un)archiver and other errors.

	mbcico:
		Removed the check to disable calling points. 