@@ -356,7 +356,7 @@ AC_MSG_RESULT([
   Configuration summary :
 
     Version : ..................... ${VERSION}
-    Hydra zlib compression : ...... ${ZLIBSUP}
+    Hydra/Binkp zlib compression :  ${ZLIBSUP}
 
 ])
 
