@@ -9,6 +9,9 @@ v0.39.9		29-Jan-2004
 		inetd or xinetd configuration for itn (tfido) calls. 
 		See the documentation of mbcico how to do this.
 
+	libcommon.a:
+		Increased the sync() delay time for execute from 200 to 300 mS.
+
 	mbcico:
 		Added telnet input and output filters so we can now call and
 		answer telnet (ITN) sessions. We don't need mbtelind anymore
@@ -17,6 +20,9 @@ v0.39.9		29-Jan-2004
 	mbsetup:
 		Clearing the working message is now only done by the keyboard
 		read function.
+
+	script:
+		Dropped support for RedHat and Mandrake pre 6.1.
 
 
 v0.39.8		26-Jan-2004 - 29-Jan-2004
